--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,6 @@ Package: datacolor
 Type: Package
 Title: Color Scales for Data Visualization
 Version: 0.0.0.9000
-Depends: R (>= 3.4.3)
 Author: Eric Marty <marty@ericmarty.com>
 Maintainer: Eric Marty <marty@ericmarty.com>
 URL: https://github.com/allopole/datacolor
@@ -13,6 +12,9 @@ Description: This package provides prebuilt color palettes and functions for def
     luminance). Additional requirmeents for color scales can include the presence or absence 
     of discontinuities and corners, maximizing discrimination between levels, and being 
     color-blind safe.  This package relies in part on the perceptually flat colorspace HCL.
+Depends: R (>= 3.4.3)
+Imports:
+    colorspace (>= 1.3-2)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
