--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,6 @@ export(colorbar)
 export(multiHue)
 export(multiHue.constantL)
 export(multiHue.diverge)
+import(grDevices)
 importFrom(colorspace,diverge_hcl)
+importFrom(graphics,image)
