Added unipalette(), updated colorbar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(colorbar)
 export(multiHue)
 export(multiHue.constantL)
 export(multiHue.diverge)
+export(unipalette)
 import(grDevices)
+import(graphics)
 importFrom(colorspace,diverge_hcl)
-importFrom(graphics,image)
