--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: datacolor
 Type: Package
-Title: Color Scales for Data Visualization
+Title: Color for Data Visualization
 Version: 0.0.0.9000
 Author: Eric Marty <marty@ericmarty.com>
 Maintainer: Eric Marty <marty@ericmarty.com>
