--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,20 @@
 
 export(AUColors)
 export(colorbar)
+export(colorplot)
+export(cyclic_hcl)
+export(cyclx)
 export(multiHue)
 export(multiHue.constantL)
 export(multiHue.diverge)
+export(rampx)
+export(stepx)
 export(unipalette)
-import(grDevices)
+import(dichromat)
 import(graphics)
 importFrom(colorspace,diverge_hcl)
+importFrom(colorspace,hex)
+importFrom(colorspace,hex2RGB)
+importFrom(colorspace,polarLUV)
+importFrom(grDevices,hcl)
+importFrom(utils,tail)
