--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(colorblind)
 export(colorplot)
 export(cyclic_hcl)
 export(cyclx)
+export(hcl2hex)
+export(heat)
 export(hex2hcl)
 export(multiHue)
 export(multiHue.constantL)
@@ -15,6 +17,7 @@ export(stepx)
 export(unipalette)
 import(dichromat)
 import(graphics)
+importFrom(colorspace,desaturate)
 importFrom(colorspace,diverge_hcl)
 importFrom(colorspace,hex)
 importFrom(colorspace,hex2RGB)
