minor fixes to pass check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,12 @@ export(stepx)
 export(unipalette)
 import(dichromat)
 import(graphics)
+import(methods)
 importFrom(colorspace,desaturate)
 importFrom(colorspace,diverge_hcl)
 importFrom(colorspace,hex)
 importFrom(colorspace,hex2RGB)
 importFrom(colorspace,polarLUV)
+importFrom(grDevices,grey)
 importFrom(grDevices,hcl)
 importFrom(utils,tail)
