--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,11 @@ Imports:
     grDevices,
     colorspace (>= 1.3-2),
     V8 (>= 1.5),
-    dichromat (>= 2.0-0)
-Suggests: viridis
+    dichromat (>= 2.0-0),
+    methods
+Suggests: 
+    viridis, 
+    lattice
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
